proto - SQLAlchemy uses Temp_database for DataInsertion.

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -1,4 +1,10 @@
 SQLALCHEMY_DATABASE_URI = 'postgresql://argo_user:pass@dione.geblubber.org/argo_db'
+
+SQLALCHEMY_BINDS = {
+    'test': 'sqlite:////root/qrgo_test.sql',
+    'data_input': 'postgresql://argo_user:pass@dione.geblubber.org/argo_temp_db'
+}
+
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 SQLALCHEMY_ECHO = True
 DEBUG = True
