proto - argo.cfg - Add token and docu

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -1,9 +1,14 @@
-SQLALCHEMY_DATABASE_URI = 'postgresql://argo_user:pass@dione.geblubber.org/argo_db'
+SQLALCHEMY_DATABASE_URI = 'postgresql://_s0543196__argo_data_generic:passpass@db.f4.htw-berlin.de/_s0543196__argo_data'
 
+# Bindings are important for using different databases.
 SQLALCHEMY_BINDS = {
-    'test': 'sqlite:////root/qrgo_test.sql',
+    # DB for unittests etc
+    'test': 'sqlite:////tmp/qrgo_test.sql',
+    # Databse to insert the Data.
     'data_input': 'postgresql://argo_user:pass@dione.geblubber.org/argo_temp_db'
 }
+
+FORCE_RELOAD_TOKEN = '4e9fe9a5d862551cb67503ed630e1c80'
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 SQLALCHEMY_ECHO = True
