proto - webapp - Data_dir is now handled by argo.cfg

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -11,5 +11,7 @@ SQLALCHEMY_BINDS = {
 FORCE_RELOAD_TOKEN = '4e9fe9a5d862551cb67503ed630e1c80'
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
-SQLALCHEMY_ECHO = True
+SQLALCHEMY_ECHO = False
 DEBUG = True
+
+ARGO_DATA_DIRECTORY = "/root/aoml/"
