proto - query_factory - Implemented the new query_factory. This Fixes #5

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -3,7 +3,7 @@ SQLALCHEMY_DATABASE_URI = 'postgresql://_s0543196__argo_data_generic:passpass@db
 # Bindings are important for using different databases.
 SQLALCHEMY_BINDS = {
     # DB for unittests etc
-    'test': 'sqlite:////tmp/qrgo_test.sql',
+    # TODO
     # Databse to insert the Data.
     'data_input': 'postgresql://argo_user:pass@dione.geblubber.org/argo_temp_db'
 }
@@ -11,7 +11,9 @@ SQLALCHEMY_BINDS = {
 FORCE_RELOAD_TOKEN = '4e9fe9a5d862551cb67503ed630e1c80'
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
-SQLALCHEMY_ECHO = False
+SQLALCHEMY_ECHO = True
+SQLALCHEMY_POOL_TIMEOUT = 3
 DEBUG = True
 
 ARGO_DATA_DIRECTORY = "/root/aoml/"
+ARGO_AUTO_REBUILD = True
