proto - data extraction - New Datafields for floats and validation. This closes #10

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -11,7 +11,7 @@ SQLALCHEMY_BINDS = {
 FORCE_RELOAD_TOKEN = '4e9fe9a5d862551cb67503ed630e1c80'
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
-SQLALCHEMY_ECHO = True
+SQLALCHEMY_ECHO = False
 SQLALCHEMY_POOL_TIMEOUT = 3
 DEBUG = True
 
