proto - config - Changed databaseserver to dione.

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -1,4 +1,5 @@
-SQLALCHEMY_DATABASE_URI = 'postgresql://_s0543196__argo_data_generic:passpass@db.f4.htw-berlin.de/_s0543196__argo_data'
+# SQLALCHEMY_DATABASE_URI = 'postgresql://_s0543196__argo_data_generic:passpass@db.f4.htw-berlin.de/_s0543196__argo_data'
+SQLALCHEMY_DATABASE_URI = 'postgresql://argo_user:pass@dione.geblubber.org/argo_db'
 
 # Bindings are important for using different databases.
 SQLALCHEMY_BINDS = {
