--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -14,7 +14,13 @@ FORCE_RELOAD_TOKEN = '4e9fe9a5d862551cb67503ed630e1c80'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 SQLALCHEMY_ECHO = False
 SQLALCHEMY_POOL_TIMEOUT = 3
-DEBUG = True
+DEBUG = False
 
 ARGO_DATA_DIRECTORY = "/root/aoml/"
 ARGO_AUTO_REBUILD = True
+
+ARGO_DATA_VALUE_RANGES = {
+    'pressure': (0, 12000),
+    'temperature': (-2, 40),
+    'salinity': (0, 42)
+}
