♪♪♪ No, secret, no cry ♪♪♪

--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -1,15 +1,17 @@
+import os
+
 # SQLALCHEMY_DATABASE_URI = 'postgresql://_s0543196__argo_data_generic:passpass@db.f4.htw-berlin.de/_s0543196__argo_data'
-SQLALCHEMY_DATABASE_URI = 'postgresql://argo_user:pass@dione.geblubber.org/argo_db'
+SQLALCHEMY_DATABASE_URI = f'postgresql://argo_user:{os.environ["DBPASS"]}@dione.geblubber.org/argo_db'
 
 # Bindings are important for using different databases.
 SQLALCHEMY_BINDS = {
     # DB for unittests etc
     # TODO
     # Databse to insert the Data.
-    'data_input': 'postgresql://argo_user:pass@dione.geblubber.org/argo_temp_db'
+    'data_input': f'postgresql://argo_user:{os.environ["TMPDBPASS"]}@dione.geblubber.org/argo_temp_db'
 }
 
-FORCE_RELOAD_TOKEN = '4e9fe9a5d862551cb67503ed630e1c80'
+FORCE_RELOAD_TOKEN = os.environ["RENEW_TOKEN"]
 
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 SQLALCHEMY_ECHO = False
