--- a/BA_argo_proto/webapp/argo.cfg
+++ b/BA_argo_proto/webapp/argo.cfg
@@ -1,14 +1,15 @@
 import os
 
-# SQLALCHEMY_DATABASE_URI = 'postgresql://_s0543196__argo_data_generic:passpass@db.f4.htw-berlin.de/_s0543196__argo_data'
-SQLALCHEMY_DATABASE_URI = f'postgresql://argo_user:{os.environ["DBPASS"]}@dione.geblubber.org/argo_db'
+SQLALCHEMY_DATABASE_URI = f'postgresql://{os.environ["DBUSER"]}:' \
+                          f'{os.environ["DBPASS"]}@{os.environ["DBURL"]}/{os.environ["DBNAME"]}'
+
+ARGO_DATA_TEMP_DB = f'postgresql://{os.environ["TMPDBUSER"]}:' \
+                    f'{os.environ["TMPDBPASS"]}@{os.environ["TMPDBURL"]}/{os.environ["TMPDBNAME"]}'
 
 # Bindings are important for using different databases.
 SQLALCHEMY_BINDS = {
-    # DB for unittests etc
-    # TODO
     # Databse to insert the Data.
-    'data_input': f'postgresql://argo_user:{os.environ["TMPDBPASS"]}@dione.geblubber.org/argo_temp_db'
+    'data_input': ARGO_DATA_TEMP_DB
 }
 
 FORCE_RELOAD_TOKEN = os.environ["RENEW_TOKEN"]
@@ -18,7 +19,8 @@ SQLALCHEMY_ECHO = False
 SQLALCHEMY_POOL_TIMEOUT = 3
 DEBUG = False
 
-ARGO_DATA_DIRECTORY = "/root/aoml/"
+ARGO_DATA_DIRECTORY = os.environ['ARGODATA_DIRECTORY']
+
 ARGO_AUTO_REBUILD = True
 
 ARGO_DATA_VALUE_RANGES = {
